# muvult

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: auth.py  beets_patches.py  beets_svc.py  config.py  db.py  library.py  main.py  models.py  navidrome.py  pool.py  quality.py  states.py  tg_utils.py
src/handlers/: admin.py  upload.py  user.py
tests/: conftest.py  test_auth.py  test_beets_patches.py  test_beets_svc.py  test_callback_data_guard.py  test_config.py  test_db.py  test_navidrome.py  test_pool.py  test_quality.py  test_tg_utils.py
tests/handlers/: test_admin.py  test_upload.py  test_user.py
